feat: add self-hosted Teachly Monitor
